# zhuri

./: .coverage  .gitignore  README.md  README_zh.md  SPEC.md  TUTORIAL.md  TUTORIAL_zh.md  coverage.xml  pyproject.toml
examples/: config.toml
examples/tasks/: deep-survey.sh  paper-writing.sh  quick-research.sh
scripts/: check_coverage_floors.py
tests/: conftest.py
tests/guardrails/: test_b5_surface.py  test_static.py
tests/integration/: test_cli_extra.py  test_cli_repl.py  test_coverage_extra.py  test_liveness.py  test_orchestrator_cycle.py  test_real_subprocess.py  test_subagents.py  test_watchdog.py
tests/unit/: test_config.py  test_config_edge.py  test_duration.py  test_openai_compat.py  test_paper_writing.py  test_prompt.py  test_providers.py  test_stall_diversity.py  test_state_store.py  test_synthesize.py  test_util_and_subskills.py  test_work_agent.py
zhuri/: __init__.py  __main__.py  banner.py  cli.py  cli_dispatch.py  config.py  config_cmd.py  entry.py  repl.py  repl_core.py
zhuri.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
zhuri/agents/: prompt.py  spec_synthesis.py  subagent.py  synthesize.py  work_agent.py
zhuri/logging/: __init__.py  jsonl.py
zhuri/orchestrator/: diversity.py  loop.py  stall.py
zhuri/providers/: base.py  fake.py  openai_compat.py  registry.py
zhuri/state/: __init__.py  locks.py  models.py  store.py
zhuri/tasks/: base.py
zhuri/tools/: __init__.py  search.py
zhuri/util/: __init__.py  duration.py  ids.py  proc.py
zhuri/watchdog/: l0_guard.py  l1_patrol.py  liveness.py
(+7 files in other folders)
